2008-03-23 Harri Pitkänen <hatapitk@iki.fi>

	* Update license to GPL v3 or later.
	* Update extension version and required OOo version for
	  openoffice.org-voikko 3.0 and OOo 3.0.
	* Use PackageInformationProvider to get the extension installation
	  path.
	* Use thread unsafe UNO purpose environment.

2008-01-23 Harri Pitkänen <hatapitk@iki.fi>

	* Add Makefile targets 'extension-files', 'oxt' and
	  'install-unpacked'. 'extension-files' is the new default,
	  'all' refers to 'oxt'.

2008-01-22 Harri Pitkänen <hatapitk@iki.fi>

	* Use locale encoding with file names.
	* Add displayname to description.xml for OOo 2.4.

2008-01-19 Harri Pitkänen <hatapitk@iki.fi>

	* Standalone extension support for OS X 10.5.
	* Update README.

2008-01-18 Harri Pitkänen <hatapitk@iki.fi>

	* Makefile support for OS X 10.5 (Intel).

2007-11-17 Harri Pitkänen <hatapitk@iki.fi>

	* Add magic key "VoikkoGetStatusInformation" for
	  obtaining diagnostics from production builds.
	* Increase version number to 2.2.

2007-08-19 Harri Pitkänen <hatapitk@iki.fi>

	* Update README
	* Makefile cleanup

2007-06-19 Harri Pitkänen <hatapitk@iki.fi>

	* Adapt for libvoikko 1.5
	* Increase version number to 2.1
	* Use private vocabulary files when building as
	  standalone extension
	* Add support for displaying license text upon
	  extension installation (not enabled by default)

2007-06-14 Harri Pitkänen <hatapitk@iki.fi>

	* Add support for building on Windows with Microsoft
	  Visual C++ 2005 Express Edition
	* Fix some warnings generated by MSVC

2007-05-12 Harri Pitkänen <hatapitk@iki.fi>

	* Return immediately from Hyphenator::hyphenate and
	  Hyphenator::createPossibleHyphens if initialization has
	  not been done.

2007-05-07 Harri Pitkänen <hatapitk@iki.fi>

	* Do not hyphenate at '
	* Increase version number to 2.0.1

2007-04-19 Harri Pitkänen <hatapitk@iki.fi>

	* Initial ChangeLog entry for version 2.0rc1