@@ -1,3 +1,8 @@
+2008-03-24 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Respect HyphMinLeading and HyphMinTrailing in
+	  Hyphenator::createPossibleHyphens.
+
 2008-03-23 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Update license to GPL v3 or later.
